made a change to bio styling to have min width fixing spacing error

--- a/main.css
+++ b/main.css
@@ -299,6 +299,7 @@ hr {
 /* media queary to change position of image and text */
 .bio {
   max-width: 25em;
+  min-width:400px;
 }
 
 .bio p {
